--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="jquery-3.3.1.js"></script>
         <script type="text/javascript">
         $(document).ready(function(){
-            alert("学号： 2018030103102 | 姓名： 彭博洋 | 班级：18计科2+2B\n购物车添加/减少功能需要到购物车页面查看");
+            alert("学号： | 姓名：  | 班级：购物车添加/减少功能需要到购物车页面查看");
         })
         </script>
     </head>
